crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_assign-6.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    SetVar {
        name: "a",
        value: GetVar {
            name: "b",
        },
        op: Some(
            Mul,
        ),
    },
)
