crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_assign-7.snap
---
source: crates/syntax/src/parser/tests.rs
expression: node.unwrap()
---
SetVar {
    name: "a",
    value: GetVar {
        name: "b",
    },
    op: Some(
        Rem,
    ),
}
