crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_binary-2.snap
---
source: crates/syntax/src/parser/tests.rs
expression: "(result, parser.errors)"
---
(
    Ok(
        Binary {
            op: BoolOr,
            left: GetVar {
                name: "a",
            },
            right: GetVar {
                name: "b",
            },
        },
    ),
    [],
)
