crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_binary-3.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Binary(
        Binary {
            op: BoolAnd,
            left: GetVar(
                GetVar {
                    name: "a",
                },
            ),
            right: GetVar(
                GetVar {
                    name: "b",
                },
            ),
        },
    ),
)
