crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_binary-4.snap
---
source: crates/syntax/src/parser/tests.rs
expression: "(result, parser.errors)"
---
(
    Ok(
        Binary {
            op: NotEquals,
            left: Binary {
                op: Equals,
                left: GetVar {
                    name: "a",
                },
                right: GetVar {
                    name: "b",
                },
            },
            right: GetVar {
                name: "c",
            },
        },
    ),
    [],
)
