crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_binary-6.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Binary {
        op: Add,
        left: Binary {
            op: Subtract,
            left: GetVar {
                name: "a",
            },
            right: GetVar {
                name: "b",
            },
        },
        right: GetVar {
            name: "c",
        },
    },
)
