crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_binary-7.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Binary {
        op: Remainder,
        left: Binary {
            op: Divide,
            left: Binary {
                op: Multiply,
                left: GetVar {
                    name: "a",
                },
                right: GetVar {
                    name: "b",
                },
            },
            right: GetVar {
                name: "c",
            },
        },
        right: GetVar {
            name: "d",
        },
    },
)
